force-app/main/default/objects/Grant_Application__c/Grant_Application__c.object-meta.xml
<CustomObject>
    <description>Grant application tracked from Preparing through Awarded/Declined. Master-Detail to Account (business).</description>
    <label>Grant Application</label>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>