force-app/main/default/objects/Grant_Application__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grant Applications</relationshipLabel>
    <relationshipName>Grant_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>