force-app/main/default/objects/Grant_Application__c/fields/Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>Completed_Items__c</fullName>
    <label>Completed Items</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.Is_Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>