force-app/main/default/objects/Grant_Application__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Agent action confidence (0-100). Below Trust_Confidence_Threshold triggers HITL nudge.</description>
    <label>Confidence Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>