force-app/main/default/objects/Grant_Application__c/fields/Escalated_Case__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case created by Escalate_To_Human flow on HITL handoff.</description>
    <label>Escalated Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Grant Applications</relationshipLabel>
    <relationshipName>Grant_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>