force-app/main/default/objects/Grant_Application__c/fields/Escalation_Required__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by post-process guardrail when Confidence_Score is below threshold or a fenced intent is detected.</description>
    <label>Escalation Required</label>
    <type>Checkbox</type>
</CustomField>