force-app/main/default/objects/Grant_Application__c/fields/Executive_Summary_Draft__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary_Draft__c</fullName>
    <description>AI-drafted executive summary from Draft_Grant_Executive_Summary Prompt Template. Watermarked "AI-assisted draft - reviewed by applicant".</description>
    <label>Executive Summary Draft</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>