force-app/main/default/objects/Grant_Application__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grant</label>
    <referenceTo>Grant_Opportunity__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>