force-app/main/default/objects/Grant_Application__c/fields/Readiness_Pct__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Pct__c</fullName>
    <formula>IF(Total_Items__c = 0, 0, ROUND(Completed_Items__c / Total_Items__c * 100, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Readiness %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>