force-app/main/default/objects/Grant_Application__c/fields/Summary_Reviewed_By_Human__c.field-meta.xml
<CustomField>
    <fullName>Summary_Reviewed_By_Human__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HITL gate. Must be true before Status can move to Submitted.</description>
    <label>Summary Reviewed By Human</label>
    <type>Checkbox</type>
</CustomField>