force-app/main/default/objects/Grant_Application__c/fields/Target_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Target_Deadline__c</fullName>
    <description>Personal target date (typically Grant.Close_Date - 7). Populated by Create_Application_And_Checklist flow.</description>
    <label>Target Deadline</label>
    <type>Date</type>
</CustomField>