force-app/main/default/objects/Grant_Application__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>Checklist_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>