force-app/main/default/objects/Grant_Application__c/validationRules/Prevent_Submit_Without_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Submit_Without_Review</fullName>
    <active>true</active>
    <description>Enforces HITL review of the AI-drafted executive summary before Submitted status can be set.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "Submitted"),
    NOT(Summary_Reviewed_By_Human__c)
)</errorConditionFormula>
    <errorMessage>You must review the AI-drafted executive summary and mark "Summary Reviewed By Human" before setting Status to Submitted.</errorMessage>
</ValidationRule>